update ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,12 @@ $RECYCLE.BIN/
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
+
+# e2e
+/e2e/*.js
+/e2e/*.map
+
+# System Files
+/.directory
+
+/package-lock.json
